--- a/index.html
+++ b/index.html
@@ -70,6 +70,142 @@
                 <span class="carousel-control-next-icon"></span>
             </a>
       </div>
+      
+      <div class="product-wrapper">
+          <h1>Піца</h1>
+          <div class="container">
+              <div class="row">
+
+                  <div class="card text-center col-lg-4 col-md-6 col-sm-12">
+                        <img src="public/img/pizza/polo.png" alt="Поло" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Поло</h5>
+                            <p class="card-text">сир моцарела, цибуля, майонез, помідори, куряче м'ясо</p>
+                            <hr>
+                            <p class="card-text">124 грн</p>
+                        </div>
+                  </div>
+                  <div class="card text-center col-lg-4 col-md-6 col-sm-12">
+                        <img src="public/img/pizza/tono.png" alt="Тоно" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Тоно</h5>
+                            <p class="card-text">соус томатний, цибуля, тунець консервований, сир моцарела</p>
+                            <hr>
+                            <p class="card-text">156 грн</p>
+                        </div>
+                  </div>
+                  <div class="card text-center col-lg-4 col-md-6 col-sm-12">
+                        <img src="public/img/pizza/carbonara.png" alt="Карбонара" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Карбонара</h5>
+                            <p class="card-text">соус томатний, шинка, запечене яйце, сир моцарела, баварські ковбаски</p>
+                            <hr>
+                            <p class="card-text">132 грн</p>
+                        </div>
+                  </div>
+                  <div class="card text-center col-lg-4 col-md-6 col-sm-12">
+                        <img src="public/img/pizza/capricciosa.png" alt="Капрічоза" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Капрічоза</h5>
+                            <p class="card-text">соус томатний, сир моцарела, шинка, свіжі гриби</p>
+                            <hr>
+                            <p class="card-text">129 грн</p>
+                        </div>
+                  </div>
+                  <div class="card text-center col-lg-4 col-md-6 col-sm-12">
+                        <img src="public/img/pizza/cezario.png" alt="Цезаріо" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Цезаріо</h5>
+                            <p class="card-text">соус вершковий, помідори, хрусткий салат, пармезан, куряче м'ясо, сир моцарела, перепелині яйця</p>
+                            <hr>
+                            <p class="card-text">167 грн</p>
+                        </div>
+                  </div>
+                  <div class="card text-center col-lg-4 col-md-6 col-sm-12">
+                        <img src="public/img/pizza/salame.png" alt="Салямі" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Салямі</h5>
+                            <p class="card-text">соус томатний, сир моцарела, ковбаса салямі</p>
+                            <hr>
+                            <p class="card-text">117 грн</p>
+                        </div>
+                  </div>
+                  <div class="card text-center col-lg-4 col-md-6 col-sm-12">
+                        <img src="public/img/pizza/prosciutto.png" alt="Прошуто" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Прошуто</h5>
+                            <p class="card-text">соус томатний, сир моцарела, шинка</p>
+                            <hr>
+                            <p class="card-text">127 грн</p>
+                        </div>
+                  </div>
+                  <div class="card text-center col-lg-4 col-md-6 col-sm-12">
+                        <img src="public/img/pizza/parma.png" alt="Парма" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Парма</h5>
+                            <p class="card-text">соус вершковий, пармезан, сир моцарела, прошуто, рукола</p>
+                            <hr>
+                            <p class="card-text">154 грн</p>
+                        </div>
+                  </div>
+                  <div class="card text-center col-lg-4 col-md-6 col-sm-12">
+                        <img src="public/img/pizza/margaryta.png" alt="Маргарита" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Маргарита</h5>
+                            <p class="card-text">соус томатний, сир моцарела, помідори</p>
+                            <hr>
+                            <p class="card-text">99 грн</p>
+                        </div>
+                  </div>
+                  <div class="card text-center col-lg-4 col-md-6 col-sm-12">
+                        <img src="public/img/pizza/kvatro.png" alt="Кватро формаджі" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Кватро формаджі</h5>
+                            <p class="card-text">соус вершковий, пармезан, сир моцарела, сир рікотта, сир дор блю,  волоський горіх, груша</p>
+                            <hr>
+                            <p class="card-text">157 грн</p>
+                        </div>
+                  </div>
+                  <div class="card text-center col-lg-4 col-md-6 col-sm-12">
+                        <img src="public/img/pizza/kalzone.png" alt="Кальцоне аль Форно" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Кальцоне аль Форно</h5>
+                            <p class="card-text">соус томатний, пармезан, сир моцарела, сир рікота, шинка, помідори</p>
+                            <hr>
+                            <p class="card-text">123 грн</p>
+                        </div>
+                  </div>
+                  <div class="card text-center col-lg-4 col-md-6 col-sm-12">
+                        <img src="public/img/pizza/dyavola.png" alt="Діабола" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Діабола</h5>
+                            <p class="card-text">соус томатний, сир моцарела, перець чилі, ковбаса пепероні</p>
+                            <hr>
+                            <p class="card-text">114 грн</p>
+                        </div>
+                  </div>
+                  <div class="card text-center col-lg-4 col-md-6 col-sm-12">
+                        <img src="public/img/pizza/melanzana.png" alt="Маланзана" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Маланзана</h5>
+                            <p class="card-text">соус вершковий, пармезан, сир моцарела, шинка, баклажани</p>
+                            <hr>
+                            <p class="card-text">134 грн</p>
+                        </div>
+                  </div>
+                  <div class="card text-center col-lg-4 col-md-6 col-sm-12">
+                        <img src="public/img/pizza/al-salmone.png" alt="Аль сальмоне" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Аль сальмоне</h5>
+                            <p class="card-text">соус вершковий, сир моцарела, кунжут, філе лосося</p>
+                            <hr>
+                            <p class="card-text">174 грн</p>
+                        </div>
+                  </div>
+
+              </div>
+          </div>
+      </div>
     </div>
     <script src="public/js/jquery.min.js"></script>
     <script src="public/js/popper.min.js"></script>
