--- a/salades.html
+++ b/salades.html
@@ -71,6 +71,47 @@
             </a>
       </div>
     </div>
+    
+    <div class="product-wrapper">
+            <h1>Салати</h1>
+            <div class="container">
+                <div class="row">
+  
+                    <div class="card text-center col-lg-4 col-md-6 col-sm-12">
+                          <img src="public/img/salade/cezzar.png" alt="Цезар" class="card-img-top">
+                          <div class="card-body">
+                              <h5 class="card-title">Салат Цезар зі смаженим курячим філе</h5>
+                              <p class="card-text">салат айсберг, помідори, куряче м`ясо, сир пармезан, перепелині яйця, духмяні сухарики та фірмова заправка</p>
+                              <p class="card-text">250 г</p>
+                              <hr>
+                              <p class="card-text">98 грн</p>
+                          </div>
+                    </div>
+                    <div class="card text-center col-lg-4 col-md-6 col-sm-12">
+                            <img src="public/img/salade/feta.png" alt="Фета" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Інсалата ді Фета</h5>
+                                <p class="card-text">салат айсберг, свіжі овочі, сир фета, грецькі горіхи, кунжут, оливки, бальзамічна заправка</p>
+                                <p class="card-text">250 г</p>
+                                <hr>
+                                <p class="card-text">96 грн</p>
+                            </div>
+                    </div>
+                    <div class="card text-center col-lg-4 col-md-6 col-sm-12">
+                            <img src="public/img/salade/proshutto.png" alt="Прошуто" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Інсалата ді Прошуто</h5>
+                                <p class="card-text">салат айcберг, прошуто, сир пармезан, помідори, рукола та бальзамічна заправка</p>
+                                <p class="card-text">135 г</p>
+                                <hr>
+                                <p class="card-text">102 грн</p>
+                            </div>
+                    </div>
+                    
+  
+                </div>
+            </div>
+        </div>
 
 
     <script src="public/js/jquery.min.js"></script>
