--- a/promotions.html
+++ b/promotions.html
@@ -42,6 +42,19 @@
         </div>
     </nav>
     <div class="content" style="background-image: url(public/img/bg/promotions_background.png);">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <img src="public/img/promotion/promotion1.PNG" alt="promotion1">
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <img src="public/img/promotion/promotion2.PNG" alt="promotion2">
+                </div>
+                 <div class="col-lg-12 col-md-12 col-sm-12">
+                    <img src="public/img/promotion/promotion3.PNG" alt="promotion3">
+                </div>
+            </div>
+        </div>
     </div>
 
 
