--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </nav>
 
-    <div class="carousel-wrapper" style="background-image: url(public/img/bg/home_pizza_background.png);">
+    <div class="wrapper" style="background-image: url(public/img/bg/home_pizza_background.png);">
         <div id="carousel" class="carousel slide" data-ride="carousel">
 
             <ul class="carousel-indicators">
@@ -69,7 +69,7 @@
             <a class="carousel-control-next" href="#carousel" data-slide="next">
                 <span class="carousel-control-next-icon"></span>
             </a>
-      </div>
+        </div>
       
       <div class="product-wrapper">
           <h1>Піца</h1>
@@ -206,7 +206,34 @@
               </div>
           </div>
       </div>
+
+        <footer class="footer bg-dark">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <span id="footer-logo">Pizzerino</span>
+                    </div>
+                    <div class="col-lg-4">
+                        <a href="https://facebook.com"><img src="public/img/facebook.png" alt=""></a>
+                        <a href="https://twitter.com"><img src="public/img/twitter.png" alt=""></a>
+                        <a href="https://instagram.com"><img src="public/img/instagram.png" alt=""></a>
+                    </div>
+                    <div class="col-lg-4">
+                       <img src="public/img/smartphone.png" alt="">
+                       <span>+38(09X)-XXX-XX-XX</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <span>This site was made for educational purposes only</span>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
+
+    
+
     <script src="public/js/jquery.min.js"></script>
     <script src="public/js/popper.min.js"></script>
     <script src="public/js/bootstrap.min.js"></script>
