--- a/delivery.html
+++ b/delivery.html
@@ -45,6 +45,30 @@
     <div class="content" style="background-image: url(public/img/bg/delivery_background.png);">
     </div>
 
+    <footer class="footer bg-dark">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <span id="footer-logo">Pizzerino</span>
+                    </div>
+                    <div class="col-lg-4">
+                        <a href="https://facebook.com"><img src="public/img/facebook.png" alt=""></a>
+                        <a href="https://twitter.com"><img src="public/img/twitter.png" alt=""></a>
+                        <a href="https://instagram.com"><img src="public/img/instagram.png" alt=""></a>
+                    </div>
+                    <div class="col-lg-4">
+                       <img src="public/img/smartphone.png" alt="">
+                       <span>+38(09X)-XXX-XX-XX</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <span>This site was made for educational purposes only</span>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
     <script src="public/js/jquery.min.js"></script>
     <script src="public/js/popper.min.js"></script>
     <script src="public/js/bootstrap.min.js"></script>
