--- a/drinks.html
+++ b/drinks.html
@@ -41,7 +41,7 @@
             </div>
         </div>
     </nav>
-    <div class="carousel-wrapper" style="background-image: url(public/img/bg/drinks_background.png);">
+    <div class="wrapper" style="background-image: url(public/img/bg/drinks_background.png);">
         <div id="carousel" class="carousel slide" data-ride="carousel">
 
             <ul class="carousel-indicators">
@@ -69,89 +69,114 @@
                 <span class="carousel-control-next-icon"></span>
             </a>
       </div>
-    </div>
 
-    <div class="product-wrapper" style="background-color: white">
-            <h1>Напої</h1>
-            <div class="container">
-                <div class="row">
-  
-                    <div class="card text-center col-lg-4 col-md-6 col-sm-12" style="background-color: white">
-                          <img src="public/img/drink/chavko.png" alt="Чавко" class="card-img-top">
-                          <div class="card-body">
-                              <h5 class="card-title">Сік томатний 1 л, ТМ “Чавко”</h5>
-                              <hr>
-                              <p class="card-text">54 грн</p>
-                          </div>
-                    </div>
-                    <div class="card text-center col-lg-4 col-md-6 col-sm-12" style="background-color: white">
-                            <img src="public/img/drink/cola0_5.png" alt="Coca Cola 0,5" class="card-img-top">
-                            <div class="card-body">
-                                <h5 class="card-title">Coca Cola — 0,5 л</h5>
-                                <hr>
-                                <p class="card-text">24 грн</p>
-                            </div>
-                    </div>
-                    <div class="card text-center col-lg-4 col-md-6 col-sm-12" style="background-color: white">
-                            <img src="public/img/drink/cola1.png" alt="Coca Cola 1" class="card-img-top">
-                            <div class="card-body">
-                                <h5 class="card-title">Coca Cola — 1 л</h5>
-                                <hr>
-                                <p class="card-text">33 грн</p>
-                            </div>
-                    </div>
-                    <div class="card text-center col-lg-4 col-md-6 col-sm-12" style="background-color: white">
-                            <img src="public/img/drink/rich_apple.png" alt="Rich Apple" class="card-img-top">
-                            <div class="card-body">
-                                <h5 class="card-title">Сік яблучний 1 л, ТМ “RICH”</h5>
-                                <hr>
-                                <p class="card-text">42 грн</p>
-                            </div>
-                    </div>
-                    <div class="card text-center col-lg-4 col-md-6 col-sm-12" style="background-color: white">
-                            <img src="public/img/drink/rich_pineapple.png" alt="Rich Pinepple" class="card-img-top">
-                            <div class="card-body">
-                                <h5 class="card-title">Сік ананасовий 1 л, ТМ “RICH”</h5>
-                                <hr>
-                                <p class="card-text">42 грн</p>
-                            </div>
-                    </div>
-                    <div class="card text-center col-lg-4 col-md-6 col-sm-12" style="background-color: white">
-                            <img src="public/img/drink/rich_orange.png" alt="Rich Orange" class="card-img-top">
-                            <div class="card-body">
-                                <h5 class="card-title">Сік апельсиновий 1 л, ТМ “RICH”</h5>
-                                <hr>
-                                <p class="card-text">42 грн</p>
-                            </div>
-                    </div>
-                    <div class="card text-center col-lg-4 col-md-6 col-sm-12" style="background-color: white">
-                            <img src="public/img/drink/rich_cherry.png" alt="Rich Cherry" class="card-img-top">
-                            <div class="card-body">
-                                <h5 class="card-title">Сік вишневий 1 л, ТМ “RICH”</h5>
-                                <hr>
-                                <p class="card-text">42 грн</p>
-                            </div>
-                    </div>
-                    <div class="card text-center col-lg-4 col-md-6 col-sm-12" style="background-color: white">
-                            <img src="public/img/drink/rich_granat.png" alt="Rich Granat" class="card-img-top">
-                            <div class="card-body">
-                                <h5 class="card-title">Сік гранатовий 1 л, ТМ “RICH”</h5>
-                                <hr>
-                                <p class="card-text">42 грн</p>
-                            </div>
-                    </div>
-                    <div class="card text-center col-lg-4 col-md-6 col-sm-12" style="background-color: white">
-                            <img src="public/img/drink/rich_exotic.png" alt="Rich Exotic" class="card-img-top">
-                            <div class="card-body">
-                                <h5 class="card-title">Сік екзотик 1 л, ТМ “RICH”</h5>
-                                <hr>
-                                <p class="card-text">42 грн</p>
-                            </div>
-                    </div>
-  
+      <div class="product-wrapper" style="background-color: white">
+        <h1>Напої</h1>
+        <div class="container">
+            <div class="row">
+
+                <div class="card text-center col-lg-4 col-md-6 col-sm-12" style="background-color: white">
+                      <img src="public/img/drink/chavko.png" alt="Чавко" class="card-img-top">
+                      <div class="card-body">
+                          <h5 class="card-title">Сік томатний 1 л, ТМ “Чавко”</h5>
+                          <hr>
+                          <p class="card-text">54 грн</p>
+                      </div>
                 </div>
+                <div class="card text-center col-lg-4 col-md-6 col-sm-12" style="background-color: white">
+                        <img src="public/img/drink/cola0_5.png" alt="Coca Cola 0,5" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Coca Cola — 0,5 л</h5>
+                            <hr>
+                            <p class="card-text">24 грн</p>
+                        </div>
+                </div>
+                <div class="card text-center col-lg-4 col-md-6 col-sm-12" style="background-color: white">
+                        <img src="public/img/drink/cola1.png" alt="Coca Cola 1" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Coca Cola — 1 л</h5>
+                            <hr>
+                            <p class="card-text">33 грн</p>
+                        </div>
+                </div>
+                <div class="card text-center col-lg-4 col-md-6 col-sm-12" style="background-color: white">
+                        <img src="public/img/drink/rich_apple.png" alt="Rich Apple" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Сік яблучний 1 л, ТМ “RICH”</h5>
+                            <hr>
+                            <p class="card-text">42 грн</p>
+                        </div>
+                </div>
+                <div class="card text-center col-lg-4 col-md-6 col-sm-12" style="background-color: white">
+                        <img src="public/img/drink/rich_pineapple.png" alt="Rich Pinepple" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Сік ананасовий 1 л, ТМ “RICH”</h5>
+                            <hr>
+                            <p class="card-text">42 грн</p>
+                        </div>
+                </div>
+                <div class="card text-center col-lg-4 col-md-6 col-sm-12" style="background-color: white">
+                        <img src="public/img/drink/rich_orange.png" alt="Rich Orange" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Сік апельсиновий 1 л, ТМ “RICH”</h5>
+                            <hr>
+                            <p class="card-text">42 грн</p>
+                        </div>
+                </div>
+                <div class="card text-center col-lg-4 col-md-6 col-sm-12" style="background-color: white">
+                        <img src="public/img/drink/rich_cherry.png" alt="Rich Cherry" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Сік вишневий 1 л, ТМ “RICH”</h5>
+                            <hr>
+                            <p class="card-text">42 грн</p>
+                        </div>
+                </div>
+                <div class="card text-center col-lg-4 col-md-6 col-sm-12" style="background-color: white">
+                        <img src="public/img/drink/rich_granat.png" alt="Rich Granat" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Сік гранатовий 1 л, ТМ “RICH”</h5>
+                            <hr>
+                            <p class="card-text">42 грн</p>
+                        </div>
+                </div>
+                <div class="card text-center col-lg-4 col-md-6 col-sm-12" style="background-color: white">
+                        <img src="public/img/drink/rich_exotic.png" alt="Rich Exotic" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Сік екзотик 1 л, ТМ “RICH”</h5>
+                            <hr>
+                            <p class="card-text">42 грн</p>
+                        </div>
+                </div>
+
             </div>
         </div>
+    </div>
+
+    <footer class="footer bg-dark">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <span id="footer-logo">Pizzerino</span>
+                    </div>
+                    <div class="col-lg-4">
+                        <a href="https://facebook.com"><img src="public/img/facebook.png" alt=""></a>
+                        <a href="https://twitter.com"><img src="public/img/twitter.png" alt=""></a>
+                        <a href="https://instagram.com"><img src="public/img/instagram.png" alt=""></a>
+                    </div>
+                    <div class="col-lg-4">
+                       <img src="public/img/smartphone.png" alt="">
+                       <span>+38(09X)-XXX-XX-XX</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <span>This site was made for educational purposes only</span>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        
+    </div>
 
     <script src="public/js/jquery.min.js"></script>
     <script src="public/js/popper.min.js"></script>
