--- a/promotions.html
+++ b/promotions.html
@@ -40,22 +40,52 @@
                 </ul>
             </div>
         </div>
+
     </nav>
     <div class="content" style="background-image: url(public/img/bg/promotions_background.png);">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                    <img src="public/img/promotion/promotion1.PNG" alt="promotion1">
-                </div>
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                    <img src="public/img/promotion/promotion2.PNG" alt="promotion2">
-                </div>
-                 <div class="col-lg-12 col-md-12 col-sm-12">
-                    <img src="public/img/promotion/promotion3.PNG" alt="promotion3">
+        <div class="promotion-wrapper">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <img src="public/img/promotion/promotion1.PNG" alt="promotion1">
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <img src="public/img/promotion/promotion2.PNG" alt="promotion2">
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <img src="public/img/promotion/promotion3.PNG" alt="promotion3">
+                    </div>
                 </div>
             </div>
         </div>
+
+        <footer class="footer bg-dark">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <span id="footer-logo">Pizzerino</span>
+                        </div>
+                        <div class="col-lg-4">
+                            <a href="https://facebook.com"><img src="public/img/facebook.png" alt=""></a>
+                            <a href="https://twitter.com"><img src="public/img/twitter.png" alt=""></a>
+                            <a href="https://instagram.com"><img src="public/img/instagram.png" alt=""></a>
+                        </div>
+                        <div class="col-lg-4">
+                           <img src="public/img/smartphone.png" alt="">
+                           <span>+38(09X)-XXX-XX-XX</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <span>This site was made for educational purposes only</span>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+        
     </div>
+
+    
 
 
     <script src="public/js/jquery.min.js"></script>
