--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                   <div class="card text-center col-lg-4 col-md-6 col-sm-12">
                         <img src="public/img/pizza/melanzana.png" alt="Маланзана" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">Маланзана</h5>
+                            <h5 class="card-title">Меланзана</h5>
                             <p class="card-text">соус вершковий, пармезан, сир моцарела, шинка, баклажани</p>
                             <hr>
                             <p class="card-text">134 грн</p>
